# bdb

./: .gitignore  .project  CMakeLists.txt  README.md  main.c  main.cpp
.kdev4/: bdb.kdev4
src/: array.c  array.h  list.c  list.h  object.h  object_context.c  object_context.h
src/bdb/: #DataBuffer.cpp#  DataBuffer.cpp  DataBuffer.h  bdb.cpp  bdb.h
src/bdb/data_struct/: GeneralizingMap.cpp  GeneralizingMap.h  Map.h  ObjectDeclaration.cpp  ObjectDeclaration.h  ObjectInstance.cpp  ObjectInstance.h  Serializable.h  TypedMap.cpp  TypedMap.h
src/bdb/util/: ArrayBuffer.cpp  ArrayBuffer.h  ObjectCache.cpp  ObjectCache.h  ObjectPool.cpp  ObjectPool.h  macros_foreach.h  utils.cpp  utils.h
